--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,22 @@ body {
 .section--gray {
     background-color: #F6F6F6;
 }
+
+.anim-block {
+    opacity: 0;
+    animation: show .3s 1;
+    animation-fill-mode: forwards;
+    animation-delay: .5s;
+    animation-direction: alternate;
+}
+
+
+@keyframes show {
+    0% {
+        opacity: 0%;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
