--- a/css/header.css
+++ b/css/header.css
@@ -32,6 +32,18 @@
     color: #828282;
     transition: all .5s ease;
 }
+.menu__link::after {
+    content: '';
+    display: block;
+    margin: 0 auto;
+    width: 0;
+    height: 1px;
+    background-color: #000;
+    transition: all .5s ease;
+}
+.menu__link:hover:after {
+    width: 100%;
+}
 .menu__link:hover {
     color: #070707;
 }
@@ -41,6 +53,7 @@
 }
 .burger-menu {
     position: fixed;
+    display: none;
     padding: 5px;
     border-radius: 5px;
     top: 30px;
@@ -49,7 +62,7 @@
     z-index: 5;
 }
 .burger-menu span {
-    display: none;
+    display: block;
     width: 34px;
     height: 4px;
     background-color: #000;
@@ -126,10 +139,14 @@
     font-weight: 700;
 }
 .content__img {
+    display: inline-block;
     width: 100%;
     height: 380px;
     overflow: hidden;
 }
 .img__after {
-    
+    transition: all .5s ease;
+}
+.img__after:hover {
+    transform: scale(1.2);
 }
